force-app/main/default/objects/HDT_SignModeSettings__mdt/HDT_SignModeSettings__mdt.object-meta.xml
<CustomObject>
    <label>HDT_SignModeSettings</label>
    <pluralLabel>HDT_SignModeSettings</pluralLabel>
</CustomObject>