force-app/main/default/objects/HDT_SignModeSettings__mdt/fields/SendMode3__c.field-meta.xml
<CustomField>
    <fullName>SendMode3__c</fullName>
    <label>SendMode3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>E-Mail</fullName>
                <default>true</default>
                <label>E-Mail</label>
            </value>
            <value>
                <fullName>Posta Cartacea</fullName>
            </value>
            <value>
                <fullName>Stampa Cartacea</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>