force-app/main/default/objects/HDT_SignModeSettings__mdt/fields/SignMode__c.field-meta.xml
<CustomField>
    <fullName>SignMode__c</fullName>
    <label>SignMode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OTP Coopresenza</fullName>
                <default>true</default>
                <label>OTP Coopresenza</label>
            </value>
            <value>
                <fullName>OTP Remoto</fullName>
            </value>
            <value>
                <fullName>Vocal Order</fullName>
            </value>
            <value>
                <fullName>Cartacea</fullName>
            </value>
            <value>
                <fullName>Contratto già firmato</fullName>
            </value>
            <value>
                <fullName>Accettato Digitalmente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>